--- a/Assignment4/package.json
+++ b/Assignment4/package.json
@@ -16,9 +16,11 @@
     "child_process": "^1.0.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "http-status-codes": "^2.2.0",
     "joi": "^17.7.1",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "eslint": "^8.34.0",
