--- a/Assignment1/package.json
+++ b/Assignment1/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "npx mocha --timeout 10000 server/test/test.js"
+    "test": "npx mocha --timeout 10000 server/test/test.js",
+    "lint": "npm run lint"
   },
   "keywords": [],
   "author": "",
